# dystopia

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml  diesel.toml
.circleci/: config.yaml  config.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
dytp-cli/: Cargo.toml
dytp-cli/src/: error.rs  lib.rs
dytp-cloud/: Cargo.toml
dytp-cloud/src/: error.rs  lib.rs  manager.rs
dytp-cloud/src/manager/: mem.rs  pg.rs
dytp-cloud/src/manager/mem/: check.rs  delete.rs  deleted_ts.rs  join.rs  latest_ts.rs  list.rs  pending_delete.rs  sync.rs
dytp-component/: Cargo.toml  README.md
dytp-component/src/: audit.rs  error.rs  health_resp.rs  health_resp_cloud.rs  health_resp_gateway.rs  health_resp_node.rs  lib.rs  node.rs  node_state.rs  schema.rs
dytp-connection/: Cargo.toml
dytp-connection/src/: error.rs  lib.rs  origin.rs  request.rs  upstream.rs
dytp-future/: Cargo.toml  README.md
dytp-future/src/: fetch_nodes.rs  get_cloud_health.rs  get_gateway_health.rs  get_health_cloud.rs  get_health_gateway.rs  get_health_node.rs  get_node_health.rs  get_pub_key.rs  lib.rs  sync_audit.rs
dytp-gateway/: Cargo.toml
dytp-gateway/src/: error.rs  lib.rs  rely.rs  route.rs  route_node.rs  ts.rs
dytp-node/: Cargo.toml
dytp-node/src/: check.rs  error.rs  health.rs  join.rs  lib.rs  pub_key.rs  rely.rs  state.rs
dytp-protocol/: Cargo.toml
dytp-protocol/src/: delim.rs  lib.rs  method.rs  raw.rs  size.rs
dytp-protocol/src/method/: encrypted.rs  plain.rs
migrations/2019-05-04-032608_create_nodes/: up.sql
migrations/2019-05-04-035716_create_audits/: down.sql  up.sql
src/: lib.rs  options.rs  schema.rs
