[package]
name = "dytp-cli"
version = "0.1.0"
authors = ["taicsuzu <taichiro0709@gmail.com>"]
edition = "2018"

[dependencies]
dytp-component = { path = "../dytp-component" }
dytp-future = { path = "../dytp-future" }
env_logger = "*"
failure = "*"
futures = "*"
log = "*"
tokio = "*"
serde = "*"
serde_json = "*"