[package]
name = "dytp-cloud"
version = "0.1.0"
authors = ["taicsuzu <taichiro0709@gmail.com>"]
edition = "2018"

[dependencies]
dytp-component = { path = "../dytp-component" }
dytp-connection = { path = "../dytp-connection" }
dytp-future = { path = "../dytp-future" }
dytp-protocol = { path = "../dytp-protocol" }
tokio = "*"
bytes = "*"
futures = "*"
failure = "*"
env_logger = "*"
lazy_static = "*"
log = "*"
openssl = "*"
chrono = "*"
semver = "*"
diesel = { version = "*", features = ["postgres"] }