[package]
name = "dytp-future"
version = "0.1.0"
authors = ["taicsuzu <taichiro0709@gmail.com>"]
edition = "2018"

[dependencies]
dytp-connection = { path = "../dytp-connection" }
dytp-component = { path = "../dytp-component" }
dytp-protocol = { path = "../dytp-protocol" }
tokio = "*"
bytes = "*"
futures = "*"
failure = "*"
env_logger = "*"
log = "*"
openssl = "*"