[package]
name = "dytp-node"
version = "0.1.0"
authors = ["taicsuzu <taichiro0709@gmail.com>"]
edition = "2018"

[dependencies]
dytp-component = { path = "../dytp-component" }
dytp-connection = { path = "../dytp-connection" }
dytp-protocol = { path = "../dytp-protocol" }
clap = "*"
tokio = "*"
bytes = "*"
futures = "*"
failure = "*"
env_logger = "*"
log = "*"
openssl = "*"
semver = "*"